--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint:nofix": "eslint src webpack.config.js && stylelint \"src/**/*.css\"",
     "format": "prettier-eslint --write \"src/**/*.js\" \"docs/**/*.js\" webpack.config.js",
     "test": "cross-env NODE_ENV=test ava",
+    "test:snapshots": "cross-env NODE_ENV=test ava --update-snapshots",
     "test:cov": "rimraf .nyc_output && nyc npm test && nyc report --reporter=lcov ",
     "test:watch": "cross-env NODE_ENV=test ava --watch",
     "semantic-release": "semantic-release",
